# hatch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml  security-audit.yml
crates/hatch-audit/: Cargo.toml
crates/hatch-audit/src/: lib.rs
crates/hatch-cli/: Cargo.toml
crates/hatch-cli/src/: main.rs  observe.rs  tui.rs
crates/hatch-core/: Cargo.toml
crates/hatch-core/src/: compile.rs  lib.rs  manifest.rs  risk.rs  sig.rs  template.rs  validate.rs
crates/hatch-core/tests/fixtures/: minimal.toml
crates/hatch-daemon/: Cargo.toml
crates/hatch-daemon/src/: approvals.rs  main.rs  manifests.rs  metrics.rs  runner.rs  server.rs  state_layer.rs
crates/hatch-hostcfg/: Cargo.toml
crates/hatch-hostcfg/src/: hosts.rs  lib.rs  rewrite.rs
crates/hatch-ipc/: Cargo.toml
crates/hatch-ipc/src/: lib.rs  messages.rs  paths.rs
crates/hatch-linux-helper/: Cargo.toml
crates/hatch-linux-helper/src/: lib.rs  main.rs
crates/hatch-protocol/: Cargo.toml
crates/hatch-protocol/src/: cel.rs  filter.rs  framing.rs  jsonrpc.rs  lib.rs  mcp.rs  policy.rs
crates/hatch-proxy/: Cargo.toml
crates/hatch-proxy/src/: dns.rs  lib.rs  proxy.rs  sni.rs
crates/hatch-registry/: Cargo.toml
crates/hatch-registry/src/: lib.rs
crates/hatch-sandbox/: Cargo.toml
crates/hatch-sandbox-linux/: Cargo.toml
crates/hatch-sandbox-linux/src/: backend.rs  capabilities.rs  cgroups.rs  landlock_apply.rs  lib.rs  mount_ns.rs  netns.rs  seccomp.rs  stub_for_other_platforms.rs
crates/hatch-sandbox-macos/: Cargo.toml
crates/hatch-sandbox-macos/src/: backend.rs  lib.rs  pf.rs  profile.rs  uid_pool.rs
crates/hatch-sandbox/src/: lib.rs  linux.rs  macos.rs  stub.rs
crates/hatch-shim/: Cargo.toml
crates/hatch-shim/src/: main.rs
crates/hatch-state/: Cargo.toml
crates/hatch-state/migrations/: 0001_init.sql
crates/hatch-state/src/: lib.rs
crates/hatch-tests/: Cargo.toml
crates/hatch-tests/fixtures/: cat.toml
crates/hatch-tests/tests/: end_to_end.rs
docs/: book.toml
docs/src/: SUMMARY.md  intro.md
docs/src/concepts/: threat-model.md
docs/src/guide/: quick-start.md
docs/src/reference/: manifest-schema.md
examples/manifests/: filesystem.toml  github.toml  minimal.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_audit_replay.rs  fuzz_cel_compile.rs  fuzz_jsonrpc_parse.rs  fuzz_manifest_parse.rs  fuzz_sni_parse.rs
manifests/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
manifests/schema/: manifest.schema.json
manifests/scripts/: new-server.sh  sign-release.sh  validate-manifest.sh
manifests/servers/everything/: manifest.toml
manifests/servers/fetch/: manifest.toml
manifests/servers/figma/: manifest.toml
manifests/servers/filesystem/: manifest.toml
manifests/servers/git/: manifest.toml
manifests/servers/github/: manifest.toml
manifests/servers/google-drive/: manifest.toml
manifests/servers/jira/: manifest.toml
manifests/servers/kubernetes/: manifest.toml
manifests/servers/linear/: manifest.toml
manifests/servers/memory/: manifest.toml
manifests/servers/notion/: manifest.toml
manifests/servers/playwright/: manifest.toml
manifests/servers/postgres/: manifest.toml
manifests/servers/puppeteer/: manifest.toml
manifests/servers/sentry/: manifest.toml
manifests/servers/sequentialthinking/: manifest.toml
manifests/servers/slack/: manifest.toml
manifests/servers/sqlite/: manifest.toml
manifests/servers/time/: manifest.toml
manifests/signing/: policy.md
packaging/aur/: PKGBUILD
packaging/homebrew/: hatch.rb
packaging/macos/: sh.hatch.daemon.plist
packaging/nix/: flake.nix
packaging/systemd/: hatch-daemon.service
scripts/: dev-setup.sh  install-uids-macos.sh  notarize-macos.sh  release.sh
tests/: Cargo-stub.txt
