[package]
name = "hatch-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hatch-core = { path = "../crates/hatch-core" }
hatch-protocol = { path = "../crates/hatch-protocol" }
hatch-proxy = { path = "../crates/hatch-proxy" }
hatch-audit = { path = "../crates/hatch-audit" }
serde_json = "1"

[workspace]
members = []

[[bin]]
name = "fuzz_manifest_parse"
path = "fuzz_targets/fuzz_manifest_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_jsonrpc_parse"
path = "fuzz_targets/fuzz_jsonrpc_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cel_compile"
path = "fuzz_targets/fuzz_cel_compile.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sni_parse"
path = "fuzz_targets/fuzz_sni_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_audit_replay"
path = "fuzz_targets/fuzz_audit_replay.rs"
test = false
doc = false
