[package]
name = "hatch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The hatch command-line interface."

[[bin]]
name = "hatch"
path = "src/main.rs"

[dependencies]
hatch-audit = { path = "../hatch-audit" }
hatch-core = { path = "../hatch-core" }
hatch-hostcfg = { path = "../hatch-hostcfg" }
hatch-ipc = { path = "../hatch-ipc" }
hatch-registry = { path = "../hatch-registry" }
hatch-sandbox-macos = { path = "../hatch-sandbox-macos" }
hatch-state = { path = "../hatch-state" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
hatch-sandbox-linux = { path = "../hatch-sandbox-linux" }

[package.metadata.deb]
name = "hatch"
maintainer = "malwarebo <malwarebo@users.noreply.github.com>"
copyright = "2026 The hatch authors"
license-file = ["../../LICENSE", "4"]
extended-description = """\
hatch sandboxes MCP (Model Context Protocol) servers on Linux and macOS,
enforcing per-server network, filesystem, and protocol-level policies
declared in signed manifests."""
depends = "$auto, iproute2, iptables"
recommends = "strace"
section = "utils"
priority = "optional"
assets = [
    ["target/release/hatch",               "usr/bin/hatch",               "755"],
    ["target/release/hatch-daemon",        "usr/bin/hatch-daemon",        "755"],
    ["target/release/hatch-shim",          "usr/bin/hatch-shim",          "755"],
    ["target/release/hatch-linux-helper",  "usr/bin/hatch-linux-helper",  "755"],
    ["../../packaging/systemd/hatch-daemon.service", "usr/lib/systemd/user/hatch-daemon.service", "644"],
    ["../../LICENSE",   "usr/share/doc/hatch/LICENSE",   "644"],
    ["../../README.md", "usr/share/doc/hatch/README.md", "644"],
]

[package.metadata.generate-rpm]
name = "hatch"
license = "Apache-2.0"
summary = "Capability-based isolation for AI tool servers"
requires = { iproute = "*", iptables = "*" }
assets = [
    { source = "../../target/release/hatch",              dest = "/usr/bin/hatch",              mode = "755" },
    { source = "../../target/release/hatch-daemon",       dest = "/usr/bin/hatch-daemon",       mode = "755" },
    { source = "../../target/release/hatch-shim",         dest = "/usr/bin/hatch-shim",         mode = "755" },
    { source = "../../target/release/hatch-linux-helper", dest = "/usr/bin/hatch-linux-helper", mode = "755" },
    { source = "../../packaging/systemd/hatch-daemon.service", dest = "/usr/lib/systemd/user/hatch-daemon.service", mode = "644", config = false },
    { source = "../../LICENSE",   dest = "/usr/share/doc/hatch/LICENSE",   mode = "644", doc = true },
    { source = "../../README.md", dest = "/usr/share/doc/hatch/README.md", mode = "644", doc = true },
]
