[package]
name = "hatch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Manifest schema, validation, policy compilation, and signature verification."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
getrandom = "0.3"
