[package]
name = "hatch-hostcfg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP host config rewriting."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
