[package]
name = "hatch-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Daemon IPC protocol types for the hatch project."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros"] }
dirs = { workspace = true }
