[package]
name = "hatch-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Signed-manifest registry client."

[dependencies]
hatch-core = { path = "../hatch-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }
zstd = { workspace = true }
toml = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand_core = { version = "0.6", features = ["std"] }
