[package]
name = "hatch-sandbox-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux sandbox backend: namespaces, cgroups, netns + iptables."

[dependencies]
hatch-core = { path = "../hatch-core" }
hatch-linux-helper = { path = "../hatch-linux-helper" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process", "rt", "io-util", "macros"] }
uuid = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"
