[package]
name = "hatch-sandbox-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS sandbox backend: sandbox-exec, PF, launchd."

[dependencies]
hatch-core = { path = "../hatch-core" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process", "rt", "io-util", "macros", "sync"] }
anyhow = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
rustix = { workspace = true }
libc = "0.2"
