[package]
name = "hatch-shim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Per-server bridge spawned by MCP hosts. Talks to the daemon."

[[bin]]
name = "hatch-shim"
path = "src/main.rs"

[dependencies]
hatch-ipc = { path = "../hatch-ipc" }
hatch-protocol = { path = "../hatch-protocol" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros", "io-std", "sync", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
